# prom

./: .dockerignore  .env.example  .gitattributes  .gitignore  BROWSER_QA_FINDINGS.md  PROM_ARCHITECTURE_MIGRATION_MEGA_FINAL.md  README.md  REPORT.md  SALES_DEMO_GUIDE.md  SERVICE_DESK_APPROVED_TEMPLATES_MAPPING.md  SERVICE_DESK_EXTERNAL_DEPENDENCIES.md  SERVICE_DESK_GIGA_TZ_GPT55_REPO_AWARE.md  SERVICE_DESK_IMPLEMENTATION_STATE.md  SERVICE_DESK_STATUS_TRANSITIONS.md  SERVICE_DESK_TZ.md  SERVICE_DESK_TZ_ARCHIVED.md  STABILIZATION_FINDINGS.md  compose.yaml  dev.cmd  dev.ps1  dev.sh  docker-compose.e2e.yml  docker-compose.yml  eslint.config.mjs  knip.json  package-lock.json  package.json  pnpm-workspace.yaml  pyproject.toml
apps/access-service/: Dockerfile  alembic.ini  pyproject.toml
apps/access-service/alembic/: env.py
apps/access-service/alembic/versions/: 202607160001_access_baseline.py  202607220001_access_sessions_and_keys.py
apps/access-service/scripts/: init_db.py  migrate_identities.py  rotate_signing_key.py  seed.py
apps/access-service/src/access_service/: __init__.py
apps/access-service/tests/: test_access_rbac.py  test_browser_sessions.py  test_identity.py  test_identity_migration.py  test_openapi.py  test_postgres_integration.py  test_signing_key_rotation.py
apps/service-desk/backend/: .env.example  Dockerfile  pyproject.toml
apps/service-desk/backend/alembic/: env.py
apps/service-desk/backend/app/: main.py
apps/service-desk/backend/scripts/: attachment_cleanup_worker.py  bootstrap_identity.py  notification_worker.py  seed.py  sla_worker.py
apps/service-desk/backend/tests/: conftest.py  test_access.py  test_admin_authorization.py  test_attachments.py  test_catalog.py  test_config.py  test_contextual_counters.py  test_email_channel.py  test_field_attachments.py  test_health.py  test_notification_outbox.py  test_notifications_domain.py  test_routing.py  test_sla_runner.py  test_sla_worker.py  test_templates.py  test_tickets.py
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202607030001_project_soft_delete.py  202607050001_project_competency_blocks.py  202607120003_demo_identity_emails.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: admin_projects.py  admin_responses.py  admin_stats.py  admin_users.py  attachments.py  auth.py  projects.py  users.py
backend/app/core/: config.py  enums.py  exceptions.py  pagination.py  security.py
backend/app/core/schemas/: common.py
backend/app/modules/attachments/: repository.py  service.py
backend/app/modules/competencies/: schemas.py  service.py
backend/app/modules/projects/: models.py  repository.py  schemas.py  service.py
backend/app/modules/reports/: models.py  repository.py  schemas.py  service.py
backend/app/modules/responses/: models.py  repository.py  schemas.py  service.py
backend/app/modules/stats/: schemas.py  service.py
backend/app/modules/tasks/: models.py  service.py
backend/app/modules/users/: models.py  repository.py  schemas.py  service.py
backend/scripts/: __init__.py  seed.py
backend/tests/: conftest.py  test_api_smoke.py  test_security.py
service-desk-backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
service-desk-backend/alembic/: env.py
service-desk-backend/alembic/versions/: 202607090001_initial_access.py  202607090002_catalog.py  202607090003_template_versions.py  202607100007_ticket_lifecycle_fields.py  202607100008_approval_workflow_configuration.py  202607100009_ticket_approval_snapshots.py  202607100010_default_assignment.py  202607100011_routing_rules.py  202607100012_ticket_comments.py  202607100016_calendar_exceptions.py  202607110018_sla_runtime.py  202607110021_notifications.py  202607110022_notification_outbox.py  202607120024_service_desk_manager_role.py  202607120025_remove_base_capabilities.py  202607120027_catalog_title_uniqueness.py  202607120028_dictionary_item_value_uniqueness.py
service-desk-backend/app/: main.py
service-desk-backend/app/api/: deps.py  router.py
service-desk-backend/app/api/routes/: access.py  admin_access.py  admin_approvals.py  admin_catalog.py  admin_routing.py  admin_sla.py  admin_templates.py  catalog.py  health.py  notifications.py  tickets.py  workbench.py
service-desk-backend/app/core/: config.py  database.py  enums.py  security.py
service-desk-backend/app/modules/access/: bootstrap.py  models.py  schemas.py  service.py
service-desk-backend/app/modules/approvals/: models.py  repository.py  schemas.py  service.py  ticket_service.py
service-desk-backend/app/modules/assignments/: policy.py
service-desk-backend/app/modules/attachments/: models.py  repository.py  schemas.py  service.py
service-desk-backend/scripts/: bootstrap_identity.py  process_notification_outbox.py  seed.py  sla_worker.py
service-desk-backend/tests/: conftest.py  test_access.py  test_admin_access.py  test_approvals.py  test_attachments.py  test_catalog.py  test_comments.py  test_contextual_counters.py  test_database_metadata.py  test_email_channel.py  test_field_attachments.py  test_health.py  test_identity_bootstrap.py  test_lifecycle.py  test_notification_outbox.py  test_notifications_api.py  test_notifications_domain.py  test_postgres_concurrency.py  test_routing.py  test_seed.py  test_sla_calendars.py  test_sla_engine.py  test_sla_runner.py  test_sla_worker.py  test_stats.py  test_templates.py  test_tickets.py  test_workbench.py
(+762 files in other folders)
