[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shpiu-project-showcase-backend"
version = "0.1.0"
description = "FastAPI backend for SHPIU project showcase MVP"
requires-python = ">=3.14"
dependencies = [
  "alembic>=1.17.0",
  "fastapi>=0.115.0,<0.116.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
  "PyJWT>=2.10.0",
  "python-multipart>=0.0.20",
  "SQLAlchemy>=2.0.40",
  "uvicorn[standard]>=0.35.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
  "ruff>=0.14.0"
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "scripts*", "tests*"]
