[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prom-access-service"
version = "0.1.0"
description = "PROM centralized access and RBAC service"
requires-python = ">=3.14"
dependencies = [
  "alembic>=1.17.0,<2.0.0",
  "cryptography>=46.0.0,<47.0.0",
  "fastapi>=0.136.3,<0.137.0",
  "prom-platform-sdk>=0.1.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.8.0,<3.0.0",
  "PyJWT>=2.10.0,<3.0.0",
  "SQLAlchemy>=2.0.40,<3.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.4.0,<9.0.0",
  "ruff>=0.14.0,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

