[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prom-access-service"
version = "0.1.0"
description = "PROM centralized access and RBAC service"
requires-python = ">=3.14"
dependencies = [
  "alembic>=1.17.0,<2.0.0",
  "cryptography>=48.0.1,<49.0.0",
  "fastapi>=0.136.3,<0.137.0",
  "httpx>=0.28.0,<1.0.0",
  "prom-platform-sdk>=0.1.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.8.0,<3.0.0",
  "PyJWT>=2.10.0,<3.0.0",
  "SQLAlchemy>=2.0.40,<3.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10.0.0",
  "ruff>=0.14.0,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.deptry]
known_first_party = ["access_service"]
package_module_name_map = { PyJWT = "jwt", prom-platform-sdk = "platform_sdk" }
optional_dependencies_dev_groups = ["dev"]
per_rule_ignores = { DEP002 = ["alembic", "psycopg", "uvicorn"] }

[tool.uv.sources]
prom-platform-sdk = { workspace = true }
